# QGpT

./: .gitignore  corpus_embedding_builder.py  display_result.py  embedding_models.py  makefile  pyproject.toml  qgpt_search.py  query_evaluator.py  test_embedding_models.py  utils.py
test_dataset/: FetaQA_test.json  OTT-QA_test.json
