[project]
name = "qgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flagembedding>=1.3.5",
    "flash-attn>=2.8.3",
    "loguru>=0.7.3",
    "numpy>=1.21.0",
    "pylate>=1.3.0",
    "pymilvus[model]>=2.3.0",
    "torch>=2.8.0",
]
